--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "socket.io": "~0.9.16"
   },
   "devDependencies": {
-    "Faker": "~0.5.11",
+    "casual": "~1.3.3",
     "colors": "~0.6.2"
   },
   "repository": {
