--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "request": "~2.27.0",
     "fs-extra": "~0.8.1",
     "nedb": "~0.9.3",
-    "gaze": "~0.4.3",
-    "socket.io": "~0.9.16"
+    "gaze": "~0.4.3"
   },
   "devDependencies": {
     "casual": "~1.3.3",
